<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box one</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="blue_button">Blue Button</string>
    <string name="purple_button">Purple Button</string>
    <string name="red_button">Red Button</string>
</resources>
